testdata/baselines/reference/submodule/conformance/moduleExportAssignment6.errors.txt
webpackLibNormalModule.js(2,17): error TS8010: Type annotations can only be used in TypeScript files.
webpackLibNormalModule.js(7,17): error TS8010: Type annotations can only be used in TypeScript files.


==== webpackLibNormalModule.js (2 errors) ====
    class C {
        /** @param {number} x */
                    ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        constructor(x) {
            this.x = x
            this.exports = [x]
        }
        /** @param {number} y */
                    ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        m(y) {
            return this.x + y
        }
    }
    function exec() {
        const module = new C(12);
        return module.exports; // should be fine because `module` is defined locally
    }
    
    function tricky() {
        // (a trickier variant of what webpack does)
        const module = new C(12);
        return () => {
            return module.exports;
        }
    }
    